--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ xcuserdata/
 ## Playgrounds
 timeline.xctimeline
 playground.xcworkspace
+TwitterDataTool/TwitterDataTool/creds.plist
+TwitterDataTool/TwitterDataTool/Info.plist
